--- a/CharlieTheUnicorn/app/src/main/res/layout/content_main.xml
+++ b/CharlieTheUnicorn/app/src/main/res/layout/content_main.xml
@@ -6,5 +6,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_main"
-    android:screenOrientation="landscape"/>
+    tools:layout="@layout/fragment_main"/>
