--- a/CharlieTheUnicorn/app/src/main/res/layout/fragment_main.xml
+++ b/CharlieTheUnicorn/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background2"
+    android:background="@drawable/background_long"
     tools:context="com.example.admin.charlietheunicorn.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
