added initial skeleton

--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/fragment_main.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/fragment_main.xml
@@ -6,12 +6,22 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.charlietheunicorn.charlietheunicorncomicstrip.MainActivityFragment"
-    tools:showIn="@layout/activity_main">
+    android:id="@+id/rl_main_view"
+    tools:context=".fragments.MainActivityFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Our Initial Start Page"
+        android:id="@+id/textView2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start Game"
+        android:id="@+id/button_start"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
