background update plus added custom fonts

--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/three_frame_view.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/three_frame_view.xml
@@ -7,6 +7,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Three Frame Layout"
+        android:textColor="@android:color/white"
         android:id="@+id/textView3"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
