--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/choose_view.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/choose_view.xml
@@ -6,6 +6,7 @@
 
     <TextView
         android:layout_width="wrap_content"
+        android:textColor="@android:color/white"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Choose View"
@@ -20,18 +21,21 @@
 
         <RadioButton
             android:layout_width="wrap_content"
+            android:textColor="@android:color/white"
             android:layout_height="wrap_content"
             android:text="2 views"
             android:id="@+id/radioButton" />
 
         <RadioButton
             android:layout_width="wrap_content"
+            android:textColor="@android:color/white"
             android:layout_height="wrap_content"
             android:text="3 views"
             android:id="@+id/radioButton2" />
 
         <RadioButton
             android:layout_width="wrap_content"
+            android:textColor="@android:color/white"
             android:layout_height="wrap_content"
             android:text="4 views"
             android:id="@+id/radioButton3" />
