--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/four_frame_view.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/four_frame_view.xml
@@ -7,6 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/white"
         android:text="Four Frame Layout"
         android:id="@+id/textView3"
         android:layout_centerVertical="true"
