--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/fragment_main.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/fragment_main.xml
@@ -12,16 +12,23 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Our Initial Start Page"
-        android:id="@+id/textView2" />
+        android:text="@string/game_title"
+        android:textColor="@android:color/white"
+        android:id="@+id/tv_welcome"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="60sp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="150dp"
         android:text="Start Game"
+        android:textSize="20sp"
         android:id="@+id/button_start"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:textColor="@android:color/white"
+        android:background="@drawable/button"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="150dp" />
 
 </RelativeLayout>
