--- a/CharlieTheUnicornComicStrip/app/src/main/res/values/styles.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/values/styles.xml
@@ -8,6 +8,30 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="SharedTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="SharedButtonStyle" parent="android:Widget.Button">
+        <item name="android:background">@drawable/button</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_width">250dp</item>
+        <item name="android:layout_height">150dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="SharedHeadlinesStyle" parent="android:Widget.TextView">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_marginBottom">20dp</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
