--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/fragment_main.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/fragment_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:customAttrs="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,24 +10,19 @@
     android:id="@+id/rl_main_view"
     tools:context=".fragments.MainActivityFragment">
 
-    <TextView
+    <com.charlietheunicorn.charlietheunicorncomicstrip.shared.CustomFontTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/game_title"
-        android:textColor="@android:color/white"
+        customAttrs:customFont="comics"
         android:id="@+id/tv_welcome"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="60sp"/>
+        style="@style/SharedHeadlinesStyle"/>
 
     <Button
-        android:layout_width="250dp"
-        android:layout_height="150dp"
         android:text="Start Game"
-        android:textSize="20sp"
         android:id="@+id/button_start"
-        android:textColor="@android:color/white"
-        android:background="@drawable/button"
+        style="@style/SharedButtonStyle"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="150dp" />
