replaced canvas layout with proper view to draw on

--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/activity_drawing.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/activity_drawing.xml
@@ -22,6 +22,6 @@
         layout="@layout/drawing_canvas" />
 
     <include
-        android:id="@+id/bottom"
+        android:id="@+id/footer"
         layout="@layout/drawing_bottom_toolbar" />
 </LinearLayout>
