--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/drawing_bottom_toolbar.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/drawing_bottom_toolbar.xml
@@ -4,7 +4,7 @@
     android:layout_height="50dp"
     android:layout_gravity="center"
     android:orientation="horizontal"
-    android:background="@android:color/holo_blue_dark"
+    android:background="@android:color/darker_gray"
     android:id="@+id/drawing_toolbar_bottom_layout">
 
     <ImageButton
