--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/drawing_bottom_toolbar.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/drawing_bottom_toolbar.xml
@@ -11,9 +11,10 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_margin="2dp"
-        android:background="#FF009999"
+        android:background="#FF000000"
         android:onClick="paintClicked"
-        android:tag="#FF009999" />
+        android:tag="#FF000000"
+        android:id="@+id/initial_color"/>
 
     <ImageButton
         android:layout_width="30dp"
