--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/brush_size_popup.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/brush_size_popup.xml
@@ -2,15 +2,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
 
-    <!-- <ImageButton
+    <ImageButton
+        android:id="@+id/xsmall_brush"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:src="@drawable/brush_size_xsmall" />
+
+    <ImageButton
         android:id="@+id/small_brush"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:contentDescription="@string/sml"
-        android:src="@drawable/small" /> -->
+        android:src="@drawable/brush_size_small" />
 
+    <ImageButton
+        android:id="@+id/medium_brush"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:src="@drawable/brush_size_medium" />
+
+    <ImageButton
+        android:id="@+id/large_brush"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:src="@drawable/brush_size_large" />
+
+    <ImageButton
+        android:id="@+id/xlarge_brush"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:src="@drawable/brush_size_xlarge" />
+
+    <ImageButton
+        android:id="@+id/xxlarge_brush"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:src="@drawable/brush_size_xxlarge" />
 
 </LinearLayout>
