--- a/CharlieTheUnicornComicStrip/app/src/main/res/values/dimens.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/values/dimens.xml
@@ -3,4 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="xsmall_brush_size">1dp</dimen>
+    <dimen name="small_brush_size">3dp</dimen>
+    <dimen name="medium_brush_size">5dp</dimen>
+    <dimen name="large_brush_size">10dp</dimen>
+    <dimen name="xlarge_brush_size">15dp</dimen>
+    <dimen name="xxlarge_brush_size">30dp</dimen>
 </resources>
