--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/drawing_bottom_toolbar.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/drawing_bottom_toolbar.xml
@@ -1,34 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<HorizontalScrollView
     android:layout_width="wrap_content"
-    android:layout_height="50dp"
-    android:layout_gravity="center"
-    android:orientation="horizontal"
-    android:background="@android:color/darker_gray"
-    android:id="@+id/drawing_toolbar_bottom_layout">
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:visibility="invisible">
 
-    <ImageButton
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_margin="2dp"
-        android:background="#FF000000"
-        android:onClick="paintClicked"
-        android:tag="#FF000000"
-        android:id="@+id/initial_color"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:background="@android:color/white"
+        android:id="@+id/drawing_toolbar_bottom_layout">
 
-    <ImageButton
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_margin="2dp"
-        android:background="#FF009999"
-        android:onClick="paintClicked"
-        android:tag="#FF009999" />
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:fadingEdge="vertical"
+            android:onClick="paintClicked"
+            android:tag="#FF000000"
+            android:id="@+id/initial_color"/>
 
-    <ImageButton
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_margin="2dp"
-        android:background="#FF009999"
-        android:onClick="paintClicked"
-        android:tag="#FF009999" />
-</LinearLayout>
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="#FF009999"
+            android:onClick="paintClicked"
+            android:tag="#FF009999" />
+    </LinearLayout>
+
+</HorizontalScrollView>
