--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/drawing_canvas.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/drawing_canvas.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.charlietheunicorn.charlietheunicorncomicstrip.shared.DrawingCanvasView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/canvas"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_marginBottom="3dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginTop="3dp"
-    android:layout_weight="1"
-    android:orientation="vertical"
-    android:background="@color/colorAccent" />
+    <com.charlietheunicorn.charlietheunicorncomicstrip.shared.DrawingCanvasView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/canvas"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="3dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:background="@android:color/white" />
