--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/activity_save.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/activity_save.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     xmlns:customAttrs="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -34,18 +35,31 @@
         android:orientation="horizontal"
         android:layout_below="@+id/imageView">
 
+        <com.charlietheunicorn.charlietheunicorncomicstrip.shared.CustomFontTextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:textSize="30sp"
+            android:text="Save:"
+            customAttrs:customFont="comics"
+            android:textColor="@android:color/white"/>
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Facebook"/>
+            android:text="Share"
+            android:id="@+id/mms_btn"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="MMS"/>
+            android:text="Gallery"
+            android:id="@+id/gallery_btn"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Gallery"/>
+            android:text="New"
+            android:id="@+id/start_over_btn"/>
+
 
     </LinearLayout>
 
