Populated shape popup with imagebuttons, Did further refactoring Shapes can now be selected, rotated, moved and placed on the canvas, where they become part of the drawing Updated custom drawingcanvas and movableimage view

--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/confirmation_top_toolbar.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/confirmation_top_toolbar.xml
@@ -10,13 +10,11 @@
         android:id="@+id/apply_btn"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:contentDescription="@string/start_new"
-        android:src="@drawable/toolbar_new_icon" />
+        android:src="@drawable/toolbar_ok" />
 
     <ImageButton
         android:id="@+id/decline_btn"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:contentDescription="@string/start_new"
-        android:src="@drawable/toolbar_new_icon" />
+        android:src="@drawable/toolbar_close" />
 </LinearLayout>
