--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/movable_image.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/movable_image.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <com.charlietheunicorn.charlietheunicorncomicstrip.shared.MovableImageView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/movable"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible"
-        android:src="@drawable/background"
-        android:layout_weight="1" />
+<com.charlietheunicorn.charlietheunicorncomicstrip.shared.MovableImageView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/movable"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:transformPivotX="100px"
+    android:transformPivotY="100px"
+    android:src="@drawable/shape_charlie"
+    android:visibility="invisible"
+    android:layout_weight="1" />
