--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/drawing_bottom_toolbar.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/drawing_bottom_toolbar.xml
@@ -16,18 +16,89 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="2dp"
-            android:fadingEdge="vertical"
+            android:background="@android:color/black"
             android:onClick="paintClicked"
-            android:tag="#FF000000"
+            android:tag="@android:color/black"
             android:id="@+id/initial_color"/>
 
         <ImageButton
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="2dp"
-            android:background="#FF009999"
+            android:background="@android:color/white"
             android:onClick="paintClicked"
-            android:tag="#FF009999" />
+            android:tag="@android:color/black" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/darker_gray"
+            android:onClick="paintClicked"
+            android:tag="@android:color/darker_gray" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/holo_blue_dark"
+            android:onClick="paintClicked"
+            android:tag="@android:color/holo_blue_dark" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/holo_blue_light"
+            android:onClick="paintClicked"
+            android:tag="@android:color/holo_blue_light" />
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/holo_green_dark"
+            android:onClick="paintClicked"
+            android:tag="@android:color/holo_green_dark" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/holo_green_light"
+            android:onClick="paintClicked"
+            android:tag="@android:color/holo_green_light" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/holo_red_dark"
+            android:onClick="paintClicked"
+            android:tag="@android:color/holo_red_dark" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/holo_red_light"
+            android:onClick="paintClicked"
+            android:tag="@android:color/holo_red_light" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/holo_orange_dark"
+            android:onClick="paintClicked"
+            android:tag="@android:color/holo_orange_dark" />
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/holo_orange_light"
+            android:onClick="paintClicked"
+            android:tag="@android:color/holo_orange_light" />
 
         <ImageButton
             android:layout_width="30dp"
@@ -36,96 +107,7 @@
             android:background="#FF009999"
             android:onClick="paintClicked"
             android:tag="#FF009999" />
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
 
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
-
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
-
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
-
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
-
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
-
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="2dp"
-            android:background="#FF009999"
-            android:onClick="paintClicked"
-            android:tag="#FF009999" />
     </LinearLayout>
 
 </HorizontalScrollView>
