--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/shapes_popup.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/shapes_popup.xml
@@ -3,13 +3,99 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
-   <ImageButton
-        android:id="@+id/first_background"
-        android:layout_width="30dp  "
-        android:layout_height="30dp"
-        android:layout_weight="1"
-        android:src="@drawable/background" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:onClick="shapeClicked"
+            android:scaleType="centerInside"
+            android:src="@drawable/shape_charlie" />
+
+        <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:onClick="shapeClicked"
+            android:scaleType="centerInside"
+            android:src="@drawable/shape_unicorn1" />
+
+        <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:onClick="shapeClicked"
+            android:scaleType="centerInside"
+            android:src="@drawable/shape_unicorn2" />
+
+        <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:onClick="shapeClicked"
+            android:scaleType="centerInside"
+            android:src="@drawable/shape_banana" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:onClick="shapeClicked"
+            android:scaleType="centerInside"
+            android:src="@drawable/shape_starfish" />
+
+        <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:onClick="shapeClicked"
+            android:scaleType="centerInside"
+            android:src="@drawable/shape_frog" />
+
+        <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:onClick="shapeClicked"
+            android:scaleType="centerInside"
+            android:src="@drawable/shape_liopleudoron" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:onClick="shapeClicked"
+            android:scaleType="centerInside"
+            android:src="@drawable/shape_speech" />
+
+        <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:onClick="shapeClicked"
+            android:scaleType="centerInside"
+            android:src="@drawable/shape_thought" />
+
+    </LinearLayout>
 
 </LinearLayout>
