--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/activity_save.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/activity_save.xml
@@ -12,22 +12,12 @@
     android:background="@drawable/background"
     tools:context="com.charlietheunicorn.charlietheunicorncomicstrip.SaveActivity">
 
-    <com.charlietheunicorn.charlietheunicorncomicstrip.shared.CustomFontTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Deal with your image"
-        customAttrs:customFont="comics"
-        android:id="@+id/save_headline"
-        android:textColor="@android:color/white"
-        android:textSize="30sp"
-        android:gravity="center"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/save_headline"/>
+        android:layout_centerHorizontal="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
