--- a/CharlieTheUnicornComicStrip/app/src/main/res/layout/background_popup.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/layout/background_popup.xml
@@ -1,15 +1,54 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
-    <!--<ImageButton
-        android:id="@+id/first_background"
-        android:layout_width="30dp  "
-        android:layout_height="30dp"
-        android:layout_weight="1"
-        android:contentDescription="@string/first_background"
-        android:src="@drawable/first_background" /> -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:layout_width="100dp  "
+            android:layout_height="100dp"
+            android:onClick="backgroundClicked"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            android:src="@drawable/black"/>
+
+        <ImageButton
+            android:layout_width="100dp  "
+            android:layout_height="100dp"
+            android:onClick="backgroundClicked"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            android:src="@drawable/white"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:layout_width="100dp  "
+            android:layout_height="100dp"
+            android:onClick="backgroundClicked"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            android:src="@drawable/background" />
+
+        <ImageButton
+            android:layout_width="100dp  "
+            android:layout_height="100dp"
+            android:onClick="backgroundClicked"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            android:src="@drawable/forest" />
+    </LinearLayout>
 
 </LinearLayout>
